--- a/css/style.css
+++ b/css/style.css
@@ -1,11 +1,14 @@
 html, body {
-    width: 50%;
+    width: 80%;
     margin: 0 auto;
+    margin-top: 20px;
     font-family: Arial, Helvetica, sans-serif;
 }
-
-.container {
-    width: 360px;
+.shell{
+  margin-left:15%;
+  width:100%;
+  height:100%;
+  opacity:0.9;
 }
 
 #inputField {
@@ -34,4 +37,60 @@ html, body {
 
 .to-dos {
     margin-top: 25px;
+}
+ 
+box-sizing: border-box;
+body {
+  font-family: Arial, Helvetica, sans-serif;
+}
+
+.column {
+  float: left;
+  width: 35%;
+  padding: 0 10px;
+}
+
+.row {
+  margin: 0 -5px;
+  }
+
+.row:after {
+  content: "";
+  display: table;
+  clear: both;
+}
+
+@media screen and (max-width: 600px) {
+  .column {
+    width: 100%;
+    display: block;
+    margin-bottom: 20px;
+  }
+}
+
+.card {
+  box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2);
+  padding: 16px;
+  text-align: center;
+  background-color: #f1f1f1;
+}
+.foot{
+  border-radius:20px;
+  margin-top:20px;
+  background-color: #f1f1f1;
+  width:73%;
+  padding:20px;
+  height:100px;
+}
+.foot a{
+  border-radius: 5px;
+  float:right;
+  background-color: black;
+  padding: 10px;
+  text-decoration: None;
+  color:white;
+  
+}
+img{
+  width:250px;
 }
